# war-room-copilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  livekit.yaml  pyproject.toml  test_dummy_revert.txt
.data/: backboard_assistant.json  backboard_decision_assistant.json  livekit-dev.yaml  speakers.json  war_room.db  war_room.db-shm  war_room.db-wal
assets/: agent.md  k8s_dictionary.json
docs/: PLAN_V0.md  architecture.md  overview.md
frontend/: .dockerignore  Dockerfile  index.html  nginx-demo.conf  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentGraph.tsx  AgentReasoning.tsx  AgentTrace.tsx  BusinessMetrics.tsx  DecisionList.tsx  HeaderBar.tsx  IncidentTimeline.tsx  IssueAnalytics.tsx  RightColumn.tsx  RunbookPanel.tsx  SiriOrb.tsx  TranscriptFeed.tsx  TranscriptViewer.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useIncidentStream.ts  useSSE.ts  useSessions.ts
frontend/src/pages/: Index.tsx
mock_data/: application_logs.json  aws_logs.json  azure_logs.json  datadog_spans.json  demo_script.md  gcp_logs.json  runbooks.yaml  service_graph.json  test_dialogues.md
scripts/: detect-ip.sh  dev.sh  kill-orphan-workers.sh  open-playground.sh  seed_datadog.py  test-client.html  test_tools.py
src/war_room_copilot/: __init__.py  config.py  llm.py  models.py  tts.py
src/war_room_copilot/api/: __init__.py  dashboard.py  demo_scenario.py  demo_seed.py  demo_server.py  deps.py  main.py  routes.py  ws.py
src/war_room_copilot/api/routes/: sessions.py  stream.py
src/war_room_copilot/core/: agent.py  pipeline.py  stt.py  tts.py
src/war_room_copilot/graph/: __init__.py  incident_graph.py  llm.py  state.py
src/war_room_copilot/graph/nodes/: __init__.py  capture_decision.py  contradict.py  github_research.py  pagerduty_research.py  postmortem.py  recall.py  respond.py  sentry_research.py  skill_router.py  summarize.py
src/war_room_copilot/memory/: __init__.py  db.py  decisions.py  long_term.py  short_term.py
src/war_room_copilot/plugins/: __init__.py
src/war_room_copilot/skills/: __init__.py  contradict.py  debug.py  ideate.py  investigate.py  investigation.py  models.py  prompts.py  recall.py  router.py  summarization.py  summarize.py
src/war_room_copilot/tools/: __init__.py  _registry.py  _util.py  backboard.py  datadog.py  github.py  github_mcp.py  logs.py  pagerduty_mcp.py  recall.py  runbook.py  sentry_mcp.py  service_graph.py  speechmatics_batch.py
src/war_room_copilot/tracing/: langsmith.py
tests/: conftest.py  test_api_routes.py  test_api_structured.py  test_config.py  test_github_revert.py  test_llm.py  test_memory.py  test_models.py  test_skill_router.py  test_tool_registry.py  test_tools_util.py  test_tts.py
tests/api/: test_demo_seed.py  test_main.py
tests/core/: test_agent.py
tests/graph/: test_graph_llm.py  test_incident_graph.py
tests/graph/nodes/: test_capture_decision.py  test_contradict.py  test_github_research.py  test_pagerduty_research.py  test_postmortem.py  test_recall.py  test_respond.py  test_sentry_research.py  test_skill_router.py  test_summarize.py
tests/tools/: test_backboard.py  test_github.py  test_github_mcp.py  test_pagerduty_mcp.py  test_sentry_mcp.py  test_speechmatics_batch.py
(+3 files in other folders)
