[project]
name = "war-room-copilot"
version = "0.1.0"
description = "Voice-first AI agent for production incident war rooms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai]>=1.0",
    "livekit-plugins-silero",
    "livekit-plugins-speechmatics",
    "livekit-plugins-elevenlabs",
    "python-dotenv",
    "PyGithub>=2.1.0",
    "backboard-sdk",
    "aiosqlite>=0.20.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["livekit.*", "github.*", "backboard.*", "aiosqlite.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
