[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "war-room-copilot"
version = "0.1.0"
description = "Voice-first AI agent for production incident war rooms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai]>=1.0",
    "livekit-plugins-silero",
    "livekit-plugins-speechmatics",
    "livekit-plugins-elevenlabs",
    "python-dotenv",
    "mcp>=1.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
]

[project.optional-dependencies]
anthropic = ["livekit-plugins-anthropic"]
google = ["livekit-plugins-google"]
all-llm = [
    "livekit-plugins-anthropic",
    "livekit-plugins-google",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
